# NSU_materials

./: BitArray.cpp  CMakeLists.txt  README.md  main.cpp  naming.h  tests.cpp
c++ oop/: README.md
c++ oop/game_of_life/: README.md
lab1/: BitArray.h
lab2/: README.md
